# aio-fleet

./: .gitignore  AGENTS.md  README.md  boilerplate.yml  fleet.yml  pyproject.toml
.github/renovate/: fleet.json
.github/workflows/: aio-base.yml  aio-build.yml  aio-check-upstream.yml  aio-prepare-release.yml  aio-publish-release.yml  ci.yml  control-plane.yml  registry-audit.yml  renovate.yml  smoke-test.yml
.trunk/: trunk.yaml
docs/: architecture.md  content-series.md  dify-launch-gate.md  fleet-operations.md  fleetbot.md  github-app.md  onboarding.md  release-model.md  required-checks.md
infra/aio-base/: Dockerfile  README.md  aio-harden
infra/github/: README.md  github-policy.yml  imports.tf  main.tf  repos.tfvars.example  variables.tf
tests/: conftest.py  test_alerts.py  test_app_manifest.py  test_app_testing.py  test_boilerplate.py  test_catalog.py  test_catalog_changelog.py  test_catalog_workflow.py  test_change_scope.py  test_changelog.py  test_checks.py  test_cleanup.py  test_cli.py  test_command_text.py  test_control_plane.py  test_control_plane_workflow.py  test_doctor.py  test_failure_classifier.py  test_fleet_dashboard.py  test_fleet_queue.py  test_fleetbot.py  test_github_app.py  test_github_policy.py  test_github_writer.py  test_manifest.py  test_poll.py  test_public_text.py  test_registry.py  test_registry_audit_workflow.py  test_release.py  test_release_plan.py  test_release_transaction.py  test_renovate.py  test_report.py  test_reusable_workflow.py  test_safety.py  test_signing.py  test_smoke.py  test_status.py  test_testing_helpers.py  (+5 more)
(+54 files in other folders)
